--- a/src/style/_header.css
+++ b/src/style/_header.css
@@ -4,7 +4,7 @@ header{
     height: 10vh;
     background-color: #222831;
     color: #ffd369;
-    padding-top: 3vh;
+    line-height: 10vh;
     text-align: center;
     font-family: 'Changa', sans-serif;
 }
